--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <title>Moment Datepicker</title>
 
-    <link href="Content/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="Content/bootstrap-responsive.css" rel="stylesheet" type="text/css" />
+    <link href="Content/bootstrap/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="Content/Prettify/Themes/bootstrap.css" rel="stylesheet" />
         
     <script src="Scripts/jquery-1.9.1.js" type="text/javascript"></script>
@@ -13,7 +12,7 @@
     <script src="Scripts/moment.i18n/all.min.js" type="text/javascript"></script>
     <script src="Scripts/bootstrap.js" type="text/javascript"></script>
     <script src="Scripts/Prettify/prettify.js"></script>
-    <script src="Scripts/knockout-2.2.1.js" type="text/javascript"></script>
+    <script src="Scripts/knockout-2.3.0.js" type="text/javascript"></script>
     <script src="Scripts/underscore.js" type="text/javascript"></script>
 
     <link href="moment-datepicker/datepicker.css" rel="stylesheet" />
@@ -24,19 +23,19 @@
 </head>
 <body>
     <div>
-        <div class="navbar">
-            <div class="navbar-inner">
-                <ul class="nav">
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="navbar-header">
+                <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Home</a></li>
                 </ul>
-                <ul class="nav">
+                <ul class="nav navbar-nav">
                     <li><a href="https://github.com/makingsense/moment-datepicker/">Source Code</a></li>
                 </ul>
-                <ul class="nav">
+                <ul class="nav navbar-nav">
                     <li><a href="https://nuget.org/packages/MomentDatepicker">NuGet Package</a></li>
                 </ul>
             </div>
-        </div>
+        </nav>
 
         <div class="container">
             <section id="typeahead">
